--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,15 @@ version: '2'
 
 services:
   nginx-proxy:
-    image: nginxproxy/nginx-proxy:latest
+    container_name: nginx-proxy
+    image: nginxproxy/nginx-proxy:1.4
     ports:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - /home/jason/github/nginx-proxy/proxy.conf:/etc/nginx/conf.d/my_proxy.conf:ro
+      # - /Users/jason/Github/nginx-proxy/proxy.conf:/etc/nginx/conf.d/my_proxy.conf:ro # optional custom config file
 
 networks:
   default:
-    name: nginx_default
+    name: nginx-default
     external: true
